Fix admin panel: remove custom date picker call, ensure space dropdown populates, separate start/end columns and move cancel button to action column

--- a/public/admin.html
+++ b/public/admin.html
@@ -992,8 +992,10 @@
       if (document.getElementById('bStart')) createTimePicker('bStart');
       if (document.getElementById('bEnd')) createTimePicker('bEnd');
 
-      // Initialise the custom date picker for bookings
-      if (document.getElementById('bDate')) createDatePicker('bDate');
+      // Use the native HTML date input for the booking date.  The
+      // custom date picker (createDatePicker) is no longer required, so
+      // this call is commented out.
+      // if (document.getElementById('bDate')) createDatePicker('bDate');
 
       // Bind analytics & exports
       const analyticsBtn = document.getElementById('loadAnalyticsBtn');
